// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleList Tests renders correctly when has no articles 1`] = `
<div>
  <div>
    <div>
      You have no data!
    </div>
  </div>
</div>
`;

exports[`ArticleList tests renders correctly 1`] = `
<div>
  <div>
    <ul
      class="container"
    >
      <li
        class="container"
      >
        <article
          class="article"
        >
          <div
            class="wrapper"
          >
            <div>
              <img
                class="imageStyle"
                src="https://cdn.cnn.com/cnnnext/dam/assets/181122102925-statue-of-liberty-crown-super-169.jpg"
              />
              <h1
                class="articleTitle"
              >
                <u>
                  The Statue of Liberty's torch heads to new museum
                </u>
              </h1>
            </div>
            <h2
              class="title"
            >
              The Statue of Liberty's torch heads to new museum
            </h2>
          </div>
          <button
            class="button"
          >
            Show more
          </button>
        </article>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ArticleList tests renders correctly when has articles 1`] = `
<div>
  <div>
    <ul
      class="container"
    >
      <li
        class="container"
      >
        <article
          class="article"
        >
          <div
            class="wrapper"
          >
            <h2
              class="title"
            >
              The Statue of Liberty's torch heads to new museum
            </h2>
          </div>
          <button
            class="button"
          >
            Show more
          </button>
        </article>
      </li>
      <li
        class="container"
      >
        <article
          class="article"
        >
          <div
            class="wrapper"
          >
            <h2
              class="title"
            >
              This Alaskan town won't see the sun for 65 days
            </h2>
          </div>
          <button
            class="button"
          >
            Show more
          </button>
        </article>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ArticleList tests renders correctly when has no articles 1`] = `
<div>
  <div>
    <div>
      You have no data!
    </div>
  </div>
</div>
`;
